# pymechs

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
examples/: controller_example.py  evolution_example.py  mechanism_example.py
lib/mechanismlib/: CMakeLists.txt  common.h  main.cpp
lib/mechanismlib/Control/: CMakeLists.txt  controller.cpp  controller.h  feedforward.cpp  feedforward.h  pid.cpp  pid.h  statefeedback.cpp  statefeedback.h
lib/mechanismlib/Dynamics/: CMakeLists.txt  connection.cpp  connection.h  constraintconnection.cpp  constraintconnection.h  damper.cpp  damper.h  dynamicelement.cpp  dynamicelement.h  endeffector.cpp  endeffector.h  hinge.cpp  hinge.h  link.cpp  link.h  motor.cpp  motor.h  motorelement.cpp  motorelement.h  spring.cpp  spring.h  stateequation.cpp  stateequation.h  torsionspring.cpp  torsionspring.h
lib/mechanismlib/Evolution/: CMakeLists.txt  dna.cpp  dna.h  mechanism.cpp  mechanism.h  mutator.cpp  mutator.h  objective.cpp  objective.h  pickandplace.cpp  pickandplace.h
lib/mechanismlib/Solver/: CMakeLists.txt  rungekutta4.cpp  rungekutta4.h  solver.cpp  solver.h  trapezoid.cpp  trapezoid.h
src/pymechs/: bindings.cpp  bindings.h  controller.py  core.py  dna.py  mechanism.py  mutator.py  objective.py  threader.cpp  threader.h
src/pymechs/control/: __init__.py  controllers.py
src/pymechs/evolution/: __init__.py  algorithms.py  objectives.py  operators.py
